--- a/views/champion.ejs
+++ b/views/champion.ejs
@@ -11,7 +11,7 @@
     <main class=" grid grid-cols-12 text-zinc-50 p-10 ">
         <section class="col-span-10 col-start-2 grid grid-cols-6 ">
             <div class="col-span-1">
-                <img src=<%='https://ddragon.leagueoflegends.com/cdn/15.3.1/img/champion/'+ champion[title].image.full %>  />
+                <img src=<%='https://ddragon.leagueoflegends.com/cdn/img/champion/loading/'+ title + "_0.jpg" %>  />
             </div>
             <article class="col-span-4 border-r-2 p-10">
                 <h1 class="text-yellow-300 text-3xl font-bold py-1"><%=title%></h1>
