--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,16 @@
   <body>
        <%- include('./navbar') %>
        <main class="bg-zinc-700">
-
+        <section class="object-center  bg-no-repeat relative">
+          <h1 class="absolute top-0 left-0 text-white">Welcome to the League Wiki, Summoner</h1>
+          <img class=" w-full" src="/images/LoL_012714_1600.jpg.webp"/>
+        </section>
+        <section class="min-h-96">
+          <h2>Learn About Every League Champion </h2>
+          <article>
+            <h3>Learn about Each characters Skills and Abilities</h3>
+          </article>
+        </section>
        </main>
        <%- include('./footer') %>
   </body>
