--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,8 +1,8 @@
 <nav class="bg-zinc-800 flex justify-between p-5 text-zinc-100">
-    <div class="flex gap-2">
-        <img class="w-10 h-10 rounded-full" src="/images/Logo.jpg">
+    <div class="flex ">
+        <a href="/" class="flex gap-2"><img class="w-10 h-10 rounded-full" src="/images/Logo.jpg">
 
-        <h1 class="text-3xl hidden lg:inline text-yellow-300">League of Wikis</h1>
+            <h1 class="text-3xl hidden lg:inline text-yellow-300">League of Wikis</h1></a>
     </div>
     <div class="md:flex  items-center text-lg gap-5 text-white hidden">
         <a class="hover:text-yellow-300 p-2 "  href="/">Home</a>
